[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scene/Arbeitsplatte/StoffeArbeitsplatte.gd" type="Script" id=1]
[ext_resource path="res://Texture/vorratsgefaess_tisch.png" type="Texture" id=2]

[node name="StoffeArbeitsplatte" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Puffer" type="Node2D" parent="." index="0"]

position = Vector2( 250, 65 )
_sections_unfolded = [ "Transform" ]

[node name="PufferTex" type="TextureRect" parent="Puffer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 100.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Biomolekuel" type="Node2D" parent="." index="1"]

position = Vector2( 400, 65 )
_sections_unfolded = [ "Transform" ]

[node name="BiomolekuelTex" type="TextureRect" parent="Biomolekuel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 100.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Reagenz" type="Node2D" parent="." index="2"]

position = Vector2( 550, 65 )
_sections_unfolded = [ "Transform" ]

[node name="ReagenzTex" type="TextureRect" parent="Reagenz" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 100.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[connection signal="mouse_entered" from="Puffer/PufferTex" to="." method="_on_Puffer_mouse_entered"]

[connection signal="mouse_exited" from="Puffer/PufferTex" to="." method="_on_Puffer_mouse_exited"]

[connection signal="mouse_entered" from="Biomolekuel/BiomolekuelTex" to="." method="_on_Biomolekuel_mouse_entered"]

[connection signal="mouse_exited" from="Biomolekuel/BiomolekuelTex" to="." method="_on_Biomolekuel_mouse_exited"]

[connection signal="mouse_entered" from="Reagenz/ReagenzTex" to="." method="_on_Reagenz_mouse_entered"]

[connection signal="mouse_exited" from="Reagenz/ReagenzTex" to="." method="_on_Reagenz_mouse_exited"]


